Minor edits to case study paper

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -82,11 +82,10 @@ KH: Michael has agreed with Fraser Canyon being a bit of an outlier in his mind,
 
 ## DATA{#cohoData}
 
-Data for this case study cover return years 1998-2020. Data prior to 1998 were not used due to concerns about inconsistent assessment methods and data quality. All Interior Fraser Coho data were provided by DFO's Fraser River Stock Assessment Unit (M. Arbeider, pers. comm.). These data included: (i) annual spawner abundance by CU (1998-2020), (ii) annual natural origin recruits-at-age by CU (brood years 1998 - 2016), (iii) a hatchery-based smolt-to-adult survival rate index, (iv) annual exploitation rates, and (v) annual spawner abundances for 11 sub-populations nested within the 5 CUs. Two types of spawner abundance series were provided: total spawners (including fish that originated from hatcheries and returned to spawn, but not including returning fish taken for hatchery brood stock) and natural-origin spawning returns (including only wild-origin fish that returned to spawn, with hatchery brood stock included).   
+Data for this case study cover return years 1998-2020. Data prior to 1998 were not used due to concerns about inconsistent assessment methods and data quality. All Interior Fraser Coho data were provided by DFO's Fraser River Stock Assessment Unit (M. Arbeider, pers. comm.). These data included: (i) annual spawner abundance by CU (1998-2020), (ii) annual natural origin recruits-at-age by CU (brood years 1998 - 2016), (iii) a hatchery-based smolt-to-adult survival rate index, (iv) annual exploitation rates, and (v) annual spawner abundances for 11 sub-populations nested within the 5 CUs. 
 
+Two types of spawner abundance series were provided: total spawners and natural-origin returns to the spawning grounds (sometimes called 'natural returns').  The first type, total spawners, includes both natural-origin spawners and spawners that originated from hatcheries but returned to spawn naturally, but does not include fish taken for hatchery brood stock.  When modelling spawner-recruit dynamics, total spawners was paired with natural-origin recruitment so that estimated productivity from all spawners was fully captured. The second type of spawner abundance series, natural-origin spawning returns, included only natural-origin fish that returned to spawn, with hatchery brood stock included. Natural-origin spawning returns were used when comparing spawning abundance to CU benchmarks or SMU-level LPRs in order to estimate CU or SMU status.
 
-Two types of spawner abundance series were provided: total spawners and natural-origin returns to the spawning grounds (sometimes called 'natural returns').  The first type, total spawners, includes both natural-origin spawners and spawners that originated from hatcheries but returned to spawn naturally, but does not include fish taken for hatchery brood stock.  When modelling spawner-recruit dynamics, total spawners was paired with natural-origin recruitment so that estimated productivity from all spawners was fully captured. The second type of spawner abundance series, natural-origin spawning returns, included only wild-origin fish that returned to spawn, with hatchery brood stock included. Natural-origin returns were used when comparing spawning abundance to CU benchmarks or SMU-level LPRs in order to estimate CU or SMU status.
-<!--KH: Note that the above paragraph has been revised to incoprate feedback from Luke on how to clearly present the difference. Does this version read ok? -->
 
 Data were similar to those previously described in @arbeiderInteriorFraserCoho2020; data treatments, assumptions, infilling, and data quality are described in detail in that document. More recent updates that are not described in @arbeiderInteriorFraserCoho2020 include the incorporation of three additional years of data (return years 2018-2020; brood years 2014-2016), updates to the smolt-to-adult marine survival rate index to use a weighted average by release size, and increased data quality screening of scale ages used to calculate the proportion of recruits at age (M. Arbeider, pers. comm.). 
 
@@ -98,7 +97,7 @@ The exploitation rate time series is a large source of uncertainty for Interior 
 
 We use three alternative ways to characterize CU status when developing LRPs for Interior Fraser Coho: 1) Pacific Salmon Status Scanner, 2) CU-level abundance relative to S\textsubscript{gen} as a lower benchmark on abundance, and 3) Distribution of spawning abundance relative to distributional targets developed by the IFCRT. 
 
-The first approach, which uses the Pacific Salmon Status Scanner tool developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt et al. (in review) as the method that should be used to estimate CU status for proportion-based reference points when a recent WSP status assessment is not available. <!-- KH: Added last bit about WSP not available to address comment from Luke  -->The other two approaches are primarily used to develop aggregate abundance-based LRPs in this case study, as well as for a point of comparison with Pacific Salmon Status Scanner tool.
+The first approach, which uses the Salmon Scanner tool developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt et al. (in review) as the method that should be used to estimate CU status for proportion-based reference points when a recent WSP status assessment is not available. <!-- KH: Added last bit about WSP not available to address comment from Luke  -->The other two approaches are primarily used to develop aggregate abundance-based LRPs in this case study, as well as for a point of comparison with the Salmon Scanner tool.
 
 The second approach is based on comparing the current abundance of each CU to its CU-specific estimate of S\textsubscript{gen}, where CU status is considered poor when abundance drops below S\textsubscript{gen}. The value of S\textsubscript{gen} represents the number of spawners required to recover to S\textsubscript{MSY} (spawners <!--at?--> maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holtIndicatorsStatusBenchmarks2009a]. S\textsubscript{gen} is one of several benchmarks available for assigning multidimensional CU status in WSP Integrated Status Assessments; it represents a lower benchmark between red and amber status zones and was used as part of the 2014 Integrated Status Assessment for Interior Fraser Coho [@dfoWildSalmonPolicy2015].    
 
@@ -169,13 +168,13 @@ To maintain consistency with this previous work on Interior Fraser Coho, we also
 
 @arbeiderInteriorFraserCoho2020 and @kormanEvaluationFrameworkAssessing2019 set $\mu_{S_{REP}}$ at 1.5 times the S~REP~ value estimated from the base model fit without a prior on S~REP~. For our integrated Sgen-LRP model fits (described in Section \@ref(logistic)), we found that we needed to constrain $\mu_{SREP}$ at no more than 1.4 times the S~REP~ value to achieve model convergence, so we used the 1.4 times expansion instead.  We set $\sigma_{SREP}$ at $\sqrt{2} \times 1000 = 1414$ spawners, which is the same value used by @arbeiderInteriorFraserCoho2020. Note that the "$\times 1000$" term is used to correct for scaling spawner abundance by 1/1000 when fitting models. The effect of adding the prior on S~REP~ when fitting individual models to available data is shown in Figure \@ref(fig:coho-SR-fit).  
   
-  
+ 
+<!-- LW: Resolution on these figs looks kind of low-->  
 ```{r coho-SR-fit, fig.cap="Spawner-recruitment curves fit to spawner and recruitment data using individual models for each CU. Solid black lines shows the MLE fit for the base Ricker model while solid blue lines shows the MLE fit for the Ricker\\_priorCap model.  Associated black and blue shaded regions show the 95 percent confidence intervals on respective model fits. The red line show the replacement line.", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-compare-SRFits-IM.png")
 ```
-  
-  
-<!-- LW: Resolution on these figs looks kind of low--> 
+
+\linebreak
 
 *Calculation of Sgen*  
 
