--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -78,7 +78,6 @@ Based on differences in threats and the coastal marine environment, we suggest t
 
 Two of the three CUs in this SMU, West Vancouver Island-South and West Vancouver Island-Nootka & Kyuquot, were assessed as 'red' status in an integrated Wild Salmon Policy assessment [@dfoIntegratedBiologicalStatus2016]. For these CUs, assessments were based on component stocks without hatchery enhancement within the most recent 12 years, omitting stocks with enhancement during that period. For West Vancouver Island-South, red status was based primarily on threats of genetic introgression from strays from nearby large-scale hatcheries. For West Vancouver Island-Nootka & Kyuoquot, red status was based on a very low index of abundance for non-enhanced populations and threats of genetic introgression from strays from large-scale hatcheries. The third CU, West Vancouver Island-North, was not assessed by DFO in 2016 because the indicator site for this CU was enhanced over the most recent 12 years (other metrics of hatchery enhancement, e.g., Proportionate Natural Influence or PNI were not considered). A list of indicator and non-indicator stocks within each CU is available in @brown2020SummaryAbundance2020. 
 
-<!-- KH: It's interesting that the decision to assess WCVI-South as 'red' was based on hatchery straying; not low abundance of non-enhanced population components. This is something that wouldn't be captured in the multidimensional scanner tool, right?  Also interesting that WCVI-North was not assessed by WSP, but we do use it as part of the LRP work which we are designing to match with the WSP. I'm just flagging this for now as something I want to think more about / keep in mind as I read guidelines paper recommendations on enhancement  -->
 
 WCVI Chinook was identified as a stock of concern in the 2021 Integrated Fisheries Management Plan, IFMP, for South Coast Salmon, and a rebuilding plan is under development [@dfoIntegratedFisheriesManagement2021]. Poor marine survival rates for WCVI Chinook and low spawner levels over the past 2 decades are highlighted as reasons for conservation concern in the IFMP [@dfoIntegratedFisheriesManagement2021, p. 129]. A variety of management measures have been implemented to restrict harvest on WCVI Chinook and address these concerns, described in the IFMP [@dfoIntegratedFisheriesManagement2021].
 
@@ -152,7 +151,7 @@ CH: my initial thinking would be remove time-periods where PNI is very high from
 <!--CH: Mention caveat about northern CU/inlet being DD possibly?-->
 
 
-Inlet status was derived by applying the multidimensional approach used within the Pacific Salmon Status Scanner to individual inlets (Pestal et al., in prep). We found that the status using this method was equivalent to status on a single metric, abundance relative to a lower benchmark S~gen~ for all inlets, because abundances were only available on a relative scale (only indicator stocks are monitored consistently); absolute numbers were not available (as shown in Figure \@ref(fig:decision-tree)). Because the results were the same, we present a single set of analyses and results, labeled as the single metric (which also represents multidimensional status in this case). Holt et al. (in review) recommends applying the Salmon SCanner to derive CU-level status.
+Inlet status was derived by applying the multidimensional approach used within the Pacific Salmon Status Scanner to individual inlets (Pestal et al., in prep). We found that the status using this method was equivalent to status on a single metric, abundance relative to a lower benchmark S~gen~ for all inlets, because abundances were only available on a relative scale (only indicator stocks are monitored consistently); absolute numbers were not available (as shown in Figure \@ref(fig:decision-tree)). Because the results were the same, we present a single set of analyses and results, labeled as the single metric (which also represents multidimensional status in this case). Holt et al. (in review) recommends applying the Salmon Scanner to derive CU-level status.
 
 The lower benchmark on abundances applied under the WSP, S~gen~, the spawner abundances required to achieve S~MSY~ within one generation without fishing under equilibrium conditions, was derived by optimizing the Ricker equation with recruitment set to S~MSY~ (equation \@ref(eq:Sgen) repeated again here for transparency):
 
