--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -30,7 +30,7 @@ There are several disadvantages of the logistic regression-based LRPs. First, ou
 
 Second, logistic regression-based LRPs are limited to conditions that have been historically observed. This can be a problem when there is poor contrast in historical data, as was the case for WCVI Chinook.  In this case, there were no years when all component inlets were above their lower benchmarks. However, similar challenges could occur in cases where no CUs drop below their lower benchmarks.  The dependence on historically observed conditions is a further limitation if there have been changes in the correlation in populations dynamics among CUs over time such that current (or future) correlations are not represented by historical data.
 
-Third, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated.  Here, we found that logistic regression-based LRPs were estimatable for interior Fraser Coho (average correlation within CUS of 0.43), but not estimable for Inside South Coast Chum - Non-Fraser (average correlation within CUs of 0.12). Also, the wide range in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in \@ref(MethodsChapters) can be used to support or reject logistic regression-based LRPs. We illustrate how these diagnostics are used to evaluate model fit in Sections \@ref(IFCChapter) and \@ref(ISCchumChapter).    
+Third, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated.  Here, we found that logistic regression-based LRPs were estimatable for interior Fraser Coho (average correlation in spawner abundances among CUS of 0.56), but not estimable for Inside South Coast Chum - Non-Fraser (average correlation among CUs of 0.12). Also, the wide range in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in \@ref(MethodsChapters) can be used to support or reject logistic regression-based LRPs. We illustrate how these diagnostics are used to evaluate model fit in Sections \@ref(IFCChapter) and \@ref(ISCchumChapter).    
 
 
 Similar to proportion-based LRPs, CUs without reliable data poses a problem for the estimation of logistic regression-based LRPs. When CUs abundances covary strongly, it may be possible to use data-rich CUs as indicators for data-limited CUs. However, in our case study on Interior Fraser River Coho, we found that logistic regression-based LRPs were more uncertain when more than 1 CUs was missing. 
