--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -16,14 +16,14 @@ In Press]
 ## BACKGROUND
 
 
-Amendments to the Canadian Fisheries Act (2019) include new Fish Stocks provisions that introduce legal obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005a].
+Amendments to the Canadian Fisheries Act (2019) include new Fish Stocks provisions that introduce legal obligations to manage stocks to promote sustainability and avoid limit reference points, LRPs [@dfoScienceAdvicePrecautionary2021]. The provisions also require plans to rebuild fish stocks that have declined to, or below, an LRP while taking into account the biology of the fish and environmental conditions facing the stock. These obligations apply to major fish stocks that are prescribed under regulations. These revisions reinforce the previously established DFO policies to manage stocks in line with the precautionary approach, including [The Fishery Decision Making Framework Incorporating the Precautionary Approach](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/precaution-eng.htm)[@dfoFisheryDecisionMakingFramework2009], also known as DFO's Precautionary Approach Framework within the [Sustainable Fisheries Framework](https://www.dfo-mpo.gc.ca/reports-rapports/regs/sff-cpd/overview-cadre-eng.html) and Canada's [Wild Salmon Policy](https://www.pac.dfo-mpo.gc.ca/fm-gp/salmon-saumon/wsp-pss/policy-politique-eng.html) [@dfoCanadaPolicyConservation2005].
 
 Under DFO's Precautionary Approach Framework, LRPs represent the stock status below which serious harm is occurring to the stock. At this stock status level, there may also be resultant impacts to the ecosystem, associated species and a long-term loss of fishing opportunities [@dfoFisheryDecisionMakingFramework2009]. Serious harm to stocks are generally described in terms of impaired productivity, where declines are irreversible or only slowly reversible [@kronlundSelectionRoleLimit2018]. Serious harm can occur due to depensatory mortality (or allee effects) that occur because of, for example, increased predation rates or inability to find mates at very low abundances [@chenIncorporatingAlleeEffects2002]. Because allee effects are only infrequently observed among marine fish species [@keithPopulationDynamicsMarine2012], and rarely detected for Pacific salmon [but see @cunninghamSizeSelectivityPredation2013], a biological basis for serious harm is often difficult to identify. 
 
 Furthermore, the definition of serious harm from @dfoFisheryDecisionMakingFramework2009 indicates that LRPs should be *above* the level where serious harm occurs, not at the level where it is occurring, and that long-term losses should be avoided.  Defining the level before serious harm occurs to a species or ecosystem is a pervasive challenge as harm is often not identified until it is already occurring [@hilbornQuantitativeFisheriesStock1986]. Also, this definition of serious harm mentions possible impacts on other ecosystem components, which are often challenging to identify because of limited data and poor understanding of mechanisms driving declines in productivity [but see @chagarisEcologicalReferencePoints2020].
  
 
-Canada's Wild Salmon Policy, WSP, represents DFO's implementation of the Precautionary Approach Framework for Pacific salmon. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005a]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting Conservation Units (CUs), defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). 
+Canada's Wild Salmon Policy, WSP, represents DFO's implementation of the Precautionary Approach Framework for Pacific salmon. The goal of the WSP is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity [@dfoCanadaPolicyConservation2005]. One objective of the WSP is to safeguard the genetic diversity of wild Pacific salmon by maintaining and protecting Conservation Units (CUs), defined as a "group of wild salmon sufficiently isolated from other groups that, if extirpated is very unlikely to recolonize naturally within an acceptable time frame, such as a human lifetime or a specified number of salmon generations" (DFO 2005). 
 
 
 Differences in adaptive traits among CUs results in diversity in CU-level responses to threats and environmental drivers. It is therefore expected that maintaining CU-level diversity will contribute to the establishment of portfolio effect of aggregations of CUs. Portfolio effects have been demonstrated for numerous salmon stocks, and are defined as a dampening of interannual variance in aggregate-level recruitment due to the complementary or independent dynamics among component sub-populations [@schindlerPopulationDiversityPortfolio2010a]. Population and life-history diversity can buffer species from environmental variability and contribute to long-term stability through differing responses to environmental changes, e.g., those anticipated under climate warming. Deterioration of portfolio effects have been observed for Pacific salmon in Canada, in part due to fishing practices that ignored underlying population structure (e.g., structure at the CU level) and associated biodiversity [@pricePortfolioSimplificationArising2021a].
@@ -31,7 +31,7 @@ Differences in adaptive traits among CUs results in diversity in CU-level respon
 Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status: green, amber, and red. These zones represent increasing conservation concern from green to red requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada [holtIndicatorsStatusBenchmarks2009a; dfoCanadaPolicyConservation2005a]. One recommended lower benchmark on spawning abundances is S~gen~, the abundance resulting in recovery to S~MSY~ in one salmon generation under equilibrium conditions, [@holtEvaluationBenchmarksConservation2009]. Benchmarks for data-limited contexts have also been identified in recognition that the data required to estimate spawner-recruitment based benchmarks are not always available. See Section \@ref(cu-est-methods).
 
 
-While the assessment of Pacific salmon under the WSP has focused on setting benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005a], the revised Fisheries Act indicates that a single LRP is required for each "Major Fish Stock"[@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision created the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the need to maintain all CUs within an SMU above their lower benchmarks. The present work expands on previous work to establish assessment methods under the WSP by providing guidance on establishing LRPs for at the scale of Pacific salmon SMUs.  Given the similar intent of LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, lower benchmarks can be used as proxies for LRPs but applied at the scale of CUs instead of SMUs. Our challenge is to identify LRPs that integrate CU-level estimates of status relative to lower benchmarks across all component CUs within an SMU. 
+While the assessment of Pacific salmon under the WSP has focused on setting benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005], the revised Fisheries Act indicates that a single LRP is required for each "Major Fish Stock"[@dfoScienceAdvicePrecautionary2021]. In the context of Pacific salmon, "Major Fish Stocks" are defined as Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision created the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the need to maintain all CUs within an SMU above their lower benchmarks. The present work expands on previous work to establish assessment methods under the WSP by providing guidance on establishing LRPs for at the scale of Pacific salmon SMUs.  Given the similar intent of LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, lower benchmarks can be used as proxies for LRPs but applied at the scale of CUs instead of SMUs. Our challenge is to identify LRPs that integrate CU-level estimates of status relative to lower benchmarks across all component CUs within an SMU. 
 
 
 
@@ -45,7 +45,7 @@ Less frequently, multidimensional approaches that aggregate status over numerous
 
 Multidimensional approaches can also be useful to address mismatches in scales among biological stocks, the unit of management, and the spatial scale of data collection. These are not uncommon among marine species, especially invertebrate species [@dfoProceedingsNationalPeer2016; @mullowneyBiologicalPerspectivesComplexities2020], creating challenges when identifying LRPs [@dfoScienceAdvicePrecautionary2021]. This mismatch can make undesirable states in fish populations difficult to detect, and weaken the effectiveness of resulting management measures.  <!--CH: could include snow crab example from Mullowney et al. 2020 if we wanted to flush this out a bit. I couldn't find any reference for American Lobster- i.e., Adam Cook's ppt from TESA workshop-->
 
-
+<!--CH: in next round, add "Review of Precautionary Approach Reference Points for a Variety of Fisheries Resources in the Maritimes Region". See Carrie's LRP Notes Word file. Dec. 17. 2021--> 
 
 For Pacific salmon, @portleyLimitReferencePoints2014 reviewed the use of LRPs and biological benchmarks in the US (Alaska and Pacific Northwest), Canada, Russia, and Japan. They highlight the role of LRPs and lower benchmarks in allowing for cross-jurisdictional comparisons of sustainability. In Canada, @chaputConsiderationsDefiningReference2012 reviewed the use of reference points, including lower benchmarks and LRPs, in the assessment and management of salmonids and other semelparous species. Under Canada's WSP, status assessments generally integrate data across numerous metrics representing different population characteristics, including current spawner abundances, short and long-term trends in abundances, distribution of spawning, and fishing mortality relative to productivity. Benchmarks are established for each metric and an overall multidimensional estimate of CU status is obtained by integrating status among metrics [@holtEvaluationBenchmarksConservation2009].  One advantage of this approach is that CUs missing data for any single metric can still be evaluated against remaining metrics, making the framework applicable across a relatively broad range of CUs. A second advantage is that the approach allows stability in annual status estimates despite highly variable population dynamics for some CUs and large observation errors because a single-metric dropping below the benchmark may not trigger red status. In general, persistence at low levels below abundance-based benchmarks and significant declining trends are required for red status overall.  Expert-driven processes to integrate often conflicting metrics within the multidimensional framework have been implemented for numerous Pacific salmon stocks in Canada (e.g., Fraser River Sockeye Salmon, *Oncorhynchus nerka* [@grantEvaluationUncertaintyFraser2011, @grantIntegratedBiologicalStatus2013, @grant2017FraserSockeye2020], Interior Fraser River Coho Salmon, *O. kisutch* [@dfoWildSalmonPolicy2015], and Southern BC Chinook Salmon, *O. tshawytscha* [@dfoIntegratedBiologicalStatus2016]). One challenge in implementing these expert-driven assessments is high demand on time and staff resources. Based on the consistencies that emerged from assessments where the integration of multiple metrics has been applied, (Pestal et al. In prep.)^[Pestal, G., MacDonald, B, Grant, S, and Holt, C. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci. In prep.] developed an algorithm to approximate overall WSP status by combining those metrics in a decision tree, at the scale of CUs. This algorithm, known as the Pacific Salmon Status Scanner, was ground-truthed by local assessment experts and tested with stocks not included in the original formulation. 
 
@@ -89,7 +89,7 @@ While one role of LRPs is to trigger the development of rebuilding plans under t
 
 Time-varying population processes, such as changes in productivity, have important impacts on biological benchmark, LRPs, and assessment against LRPs. While we describe some recent approaches for considering those changes, a full review and evaluation of the impacts of time-varying parameters on LRPs is beyond the scope of this study. This theme is an important area for future research.
 
-While we follow the recommendation of @holtIndicatorsStatusBenchmarks2009a to assess status of CUs using multiple metrics, we have implemented this approach using a multidimensional algorithm, the Pacific Salmon Status Scanner (or Salmon Scanner), documented in Pestal et al. (in prep), developed from the implementation of formal, peer-reviwed WSP assessments for Pacific salmon stocks in Canada. A full review of the Salmon Scanner is beyond the scope of this paper.  Furthermore, a review of individual benchmarks of CU status is beyond the scope of this paper.
+While we follow the recommendation of @holtIndicatorsStatusBenchmarks2009 to assess status of CUs using multiple metrics, we have implemented this approach using a multidimensional algorithm, the Pacific Salmon Status Scanner (or Salmon Scanner), documented in Pestal et al. (in prep), developed from the implementation of formal, peer-reviwed WSP assessments for Pacific salmon stocks in Canada. A full review of the Salmon Scanner is beyond the scope of this paper.  Furthermore, a review of individual benchmarks of CU status is beyond the scope of this paper.
 
 Decisions about prioritizing CUs for conservation within an SMU (e.g., evaluating the costs and benefits of conserving individual CUs given differential vulnerability to climate change or other stressors) is also beyond our scope, requiring a broader discussion with local knowledge holders, managers and stakeholders.
  
