--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -47,6 +47,7 @@ The Interior Fraser Coho Salmon Stock Management Unit (SMU) includes Coho Salmon
 
 We used data on total annual spawner abundances, recruitment by age (from natural spawning), and hatchery-based smolt-to-adult survival rate indices covering return years 1998-2000 to derive CU-level spawner-recruitment based benchmarks. Data on natural-origin spawner abundances at each of the 11 sub-populations summed to CU level were used to assess status and trends at the CU level for proportion-based and logistic regression-based LRPs. These data, along with exploitation rates were used to parameterize the projection model for projection-based LRPs. Hatchery contribution to production was usually small in this SMU, with PNI values >0.5, and usually >0.72. Spawner abundances are positively correlated among CUs, with an average correlation of 0.56 (Figure \@ref(fig:density-cor-plot)).
 
+<!--CH: to do for next iteration: add rug plot for data points, and limit x-axis to 00.5=-->
 
 ```{r density-cor-plot, fig.cap="Distribution of correlations in spawner abundances among CUs (or inlets for WCVI Chinook) for 3 case studies", out.width = '100%', warning=FALSE, echo=FALSE, fig.align="center"}
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/WCVIChinookStudy/DataOut/WCVI_Spawner_cors.csv', './data/chinook-Scors.csv',  mode="wb")
@@ -71,7 +72,7 @@ ggplot(df, aes(cor, fill=SMU, colour=SMU)) + geom_density(alpha=0.1) + xlim(-1,1
 ```
 
 
-We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009a], we apply the other two approaches (2) and (3) to support the development aggregate abundance-based LRPs and for a point of comparison with the Salmon Scanner. Even though aggregate abundance-based LRPs are not required for harvest management of this SMU, we provide logistic regression-based and projection-based LRPs for demonstration purposes.
+We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009], we apply the other two approaches (2) and (3) to support the development aggregate abundance-based LRPs and for a point of comparison with the Salmon Scanner. Even though aggregate abundance-based LRPs are not required for harvest management of this SMU, we provide logistic regression-based and projection-based LRPs for demonstration purposes.
 
 For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to data availability with a retrospective analysis by re-estimating CU-level benchmarks, CU statuses, and SMU-level LRPs each year using only the data prior to that year. We also implemented a sensitivity analyses where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses on structural assumptions about stock-recruitment relationship when deriving CU-level benchmarks for all proportion-based and aggregate abundance-based LRP methods.
 
