--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -122,31 +122,32 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\FKWQWWB7\\Bradford et al. - 2000 - Reference points for coho salmon ( iOncorhynchus.pdf}
 }
 
-@techreport{bradfordReviewBiologicalPrinciples2004,
-  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Res}}. {{Doc}}.},
+@article{bradfordReviewBiologicalPrinciples2004,
   title = {A Review of Biological Principles and Methods Involved in Setting Minimum Population Sizes and Recovery Objectives for the {{September}} 2004 Drafts of the {{Cultus}} and {{Sakinaw Lake}} Sockeye Salmon and {{Interior Fraser}} Coho Salmon Recovery Plans},
   author = {Bradford, M J and Wood, C},
   year = {2004},
-  number = {2004/128},
+  journal = {DFO Canadian Science Advisory Secretariat Research Document},
+  volume = {2004/128},
   pages = {iv + 48},
   abstract = {The purpose of this paper is to review the scientific basis for the recovery objectives contained in the September 2004 draft recovery plans for Cultus and Sakinaw Lake sockeye salmon and Interior Fraser coho salmon. First, a brief review of recovery objectives for a variety of other North American salmonid recovery plans was conducted, and we concluded that the objectives of the 3 plans were consistent with current practice; the main difference was that the objectives were more quantitative than was usual in other jurisdictions. Next, objectives that were developed for purpose of conserving genetic resources in the endangered populations were compared to the recent literature and were found to be minimally adequate. In a review of population viability analysis (PVA) and its application to setting conservation targets, we concluded that demographically-based conservation goals in the order of 1,000 annual spawners was only adequate if there was an additional objective of maintaining positive population growth. We detailed and reviewed the evidence for depensatory mortality in Cultus Lake on juvenile sockeye salmon and concurred with the recovery team that there was reason to be concerned that at low spawner abundance reduced smolt production rates could inhibit recovery. Lastly, we documented the evidence used to develop a total escapement estimate for Interior Fraser coho salmon that would meet recovery objectives for individual populations and sub-populations. A comparison of the recovery objectives with recent historical abundances indicates that the recovery targets for the 3 salmon populations are all less than one third of recent maxima. Thus the teams have been consistent in interpreting recovery as an abundance at the lower range of the spectrum of values they might have considered, well below the carrying capacity of their habitats. We conclude that there is a need to develop plans to maintain population productivity to ensure persistence at the proposed recovery targets.}
 }
 
-@techreport{bradfordStatusCultusLake2010,
-  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Res}}. {{Doc}}.},
+@article{bradfordStatusCultusLake2010,
   title = {Status of {{Cultus Lake}} Sockeye Salmon},
   author = {Bradford, M J and Hume, J M B and Withler, RE and Lofthouse, D and Barnetson, S and Grant, S C H and Folkes, Michael J.P. and Schubert, N and Huang, Ann-Marie},
   year = {2010},
-  number = {2010/123},
+  journal = {DFO Canadian Science Advisory Secretariat Research Document},
+  volume = {2010/123},
   pages = {vi + 44},
   abstract = {The sockeye salmon (Oncorhynchus nerka) population from Cultus Lake, British Columbia, was assessed as endangered in 2003 as a result of a long term decline in abundance that began in the 1970s. Recovery measures that include a conservation breeding program, harvest management and a predator control program in Cultus Lake have been implemented. This report reviews the current status of the population and the efficacy of the recovery measures. We found that that status of the population has not improved since 2003 largely because of poor smolt-recruit survival, and the average number of spawners remains at about 1000 fish. Harvest rates have been reduced since the 1990s and the predator control program appears to have increased the survival of juveniles in the lake. Supplementation releases of juveniles from the captive breeding program to the lake have resulted in increasing numbers of returning hatchery adults, but their success as spawners in the wild remains unknown. Modelling suggests that under the current low smolt-recuit survival rates, recovery is only possible with the successful implementation of all recovery measures. We conclude that the recovery of the Cultus Lake sockeye salmon population is highly uncertain and that continued monitoring is needed to determine if the recovery actions are indeed reducing risks to the population}
 }
 
-@techreport{brown2020SummaryAbundance2020,
+@article{brown2020SummaryAbundance2020,
   title = {2020 {{Summary}} of {{Abundance Data}} for {{Chinook Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Tshawytscha}}) in {{Southern British Columbia}}, {{Canada}}},
   author = {Brown, G. S. and Thiess, M. E. and Wor, C. and Holt, C. A. and Patten, B. and Bailey, R. E. and Parken, C. K. and Baillie, S. J. and Candy, J. R. and Willis, D. M. and Hertz, E. and Connors, B. and Pestal, G. P.},
   year = {2020},
-  number = {Can. Tech. Rep. Fish. Aquat. Sci. 3401},
+  journal = {Canadian Technical Report of Fisheries and Aquatic Sciences},
+  volume = {2020/3401},
   pages = {214},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\FUJCLK5Y\\Brown et al. - 2020 - 2020 Summary of Abundance Data for Chinook Salmon .pdf}
@@ -160,14 +161,6 @@
   pages = {83p.},
   address = {{Rome}},
   institution = {{FAO}}
-}
-
-@techreport{canadaHarvestStrategyCompliant2006,
-  title = {A Harvest Strategy Compliant with the Precautionary Approach},
-  author = {Canada, Fisheries {and} Oceans},
-  year = {2006},
-  number = {2006/023},
-  institution = {{Fisheries and Oceans Canada}}
 }
 
 @article{carwardinePriorityThreatManagement2019,
@@ -203,7 +196,7 @@
 }
 
 @techreport{chaputConsiderationsDefiningReference2012,
-  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Res}}. {{Doc}}.},
+  type = {{{DFO Canadianc Science Advisory Secretariat Research Document}}},
   title = {Considerations for Defining Reference Points for Semelparous Species, with Emphasis on Anadromous Salmonid Species Including Iteroparous Salmonids},
   author = {Chaput, G and Cass, A and Grant, S and Huang, AM and Veinott, G},
   year = {2012},
@@ -339,11 +332,9 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\GDYLNPH2\\DeFilippo et al. - 2021 - Improving short-term recruitment forecasts for coh.pdf}
 }
 
-@techreport{dfoCanadaPolicyConservation2005a,
+@article{dfoCanadaPolicyConservation2005,
   title = {Canada's {{Policy}} for {{Conservation}} of {{Wild Pacific Salmon}}},
   year = {2005},
-  address = {{Vancouver}},
-  institution = {{Fisheries and Oceans Canada}},
   collaborator = {DFO},
   langid = {english},
   lccn = {SH346 .C35 2005},
@@ -358,12 +349,12 @@
   year = {2009}
 }
 
-@techreport{dfoGuidanceAssessingThreats2014,
-  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}.},
+@article{dfoGuidanceAssessingThreats2014,
   title = {Guidance on {{Assessing Threats}}, {{Ecological Risk}} and {{Ecological Impacts}} for {{Species}} at {{Risk}}},
   author = {DFO},
   year = {2014},
-  number = {2014/013 (Erratum: June 2016)},
+  journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
+  volume = {2014/013},
   pages = {21},
   abstract = {Threat Assessment \textbullet{} For species assessed as Extirpated, Endangered or Threatened by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC), the assessment and prioritization of threats to survival and/or recovery of the species needs to be provided in the Recovery Potential Assessment (RPA).},
   langid = {english},
@@ -377,12 +368,20 @@
   number = {2006/023}
 }
 
-@techreport{dfoIntegratedBiologicalStatus2016,
-  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}.},
+@techreport{dfoHarvestStrategyCompliant2006a,
+  title = {A Harvest Strategy Compliant with the Precautionary Approach},
+  author = {DFO},
+  year = {2006},
+  number = {2006/023},
+  institution = {{Fisheries and Oceans Canada}}
+}
+
+@article{dfoIntegratedBiologicalStatus2016,
   title = {Integrated {{Biological Status}} of {{Southern British Columbia Chinook Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Tshawytscha}}) under the {{Wild Salmon Policy}}},
   author = {{DFO}},
   year = {2016},
-  number = {2016/042},
+  journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
+  volume = {2016/042},
   pages = {15},
   langid = {english}
 }
@@ -399,7 +398,7 @@
   title = {A {{Management Procedure Framework}} for {{Groundfish In British Columbia}}},
   author = {DFO},
   year = {2021},
-  journal = {DFO Can. Sci. Advis. Sec. Sci. Advis. Rep.},
+  journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
   volume = {2021/002},
   pages = {17},
   abstract = {For data-limited stocks, data are often insufficient to use traditional stock assessments to determine stock status relative to biological reference points.},
@@ -411,7 +410,7 @@
   title = {Proceedings of the {{National Peer Review}} on the {{Development}} of {{Technical Guidelines}} for the {{Provision}} of {{Scientific Advice}} on the {{Various Elements}} of {{Fisheries}} and {{Oceans Canada Precautionary Approach Framework}}; {{February}} 28-{{March}} 1, 2012},
   author = {DFO},
   year = {2016},
-  journal = {DFO Can. Sci. Advis. Sec. Proc. Ser.},
+  journal = {DFO Canadian Science Advisory Secretariat Science Proceedings Series},
   volume = {2015/005},
   pages = {100},
   langid = {english},
@@ -419,7 +418,7 @@
 }
 
 @techreport{dfoProceedingsNationalWorkshop2013,
-  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Proceed}}. {{Ser}}.},
+  type = {{{DFO Canadian Science Advisory Secretariat Proceeding Series}}},
   title = {Proceedings of the {{National Workshop}} for {{Technical Expertise}} in {{Stock Assessment}} ({{TESA}}): {{Maximum Sustainable Yield}} ({{MSY}}) {{Reference Points}} and the {{Precautionary Approach}} When {{Productivity Varies}}; {{December}} 13-15, 2011},
   author = {{DFO}},
   year = {2013},
@@ -429,24 +428,24 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\73BMV67Q\\Proceedings of the National Workshop for Technical.pdf}
 }
 
-@techreport{dfoScienceAdvicePrecautionary2021,
-  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}},
+@article{dfoScienceAdvicePrecautionary2021,
   title = {Science {{Advice}} for {{Precautionary Approach Harvest Strategies}} under the {{Fish Stocks Provisions}}},
   author = {{DFO}},
   year = {2021},
-  number = {2021/004},
+  journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
+  volume = {2021/004},
   pages = {34},
   abstract = {This Science Advisory Report (SAR) provides advice to the Science Sector concerning the implications of the revised Fisheries Act (2019), particularly the Fish Stocks provisions (FSP). The FSP are viewed in light of Canada's Fishery Decision-Making Framework Incorporating the Precautionary Approach (the `PA Policy'). The advice is organized into sections according to the text of the new legislation. Key points selected from the recommendations in the body of this report appear below.},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\YVC856LV\\Science Advice for Precautionary Approach Harvest .pdf}
 }
 
-@techreport{dfoScienceGuidelinesSupport2021,
-  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}},
+@article{dfoScienceGuidelinesSupport2021,
   title = {Science {{Guidelines}} to {{Support Development}} of {{Rebuilding Plans}} for {{Canadian Fish Stocks}}},
   author = {DFO},
   year = {2021},
-  number = {2021/006},
+  journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
+  volume = {2021/006},
   pages = {20},
   abstract = {Under the revised Fisheries Act a rebuilding plan is required when a stock falls to or below its Limit Reference Point (LRP). The LRP should be avoided with high probability to reduce the risk of serious harm and management actions to prevent further decline in stock status should be implemented before this point is reached.},
   langid = {english},
@@ -624,14 +623,13 @@
   publisher = {{Springer Science}}
 }
 
-@techreport{holtbyConservationUnitsPacific2007,
-  type = {Research {{Document}}},
+@article{holtbyConservationUnitsPacific2007,
   title = {Conservation {{Units}} for {{Pacific Salmon}} under the {{Wild Salmon Policy}}},
   author = {Holtby, L. Blair and Ciruna, Kristine  A.},
   year = {2007},
-  number = {2007/070},
+  journal = {DFO Canadian Science Advisory Secretariat Research Document},
+  volume = {2007/070},
   pages = {358},
-  institution = {{Fisheries and Oceans Canada}},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\A26ES6NW\\Holtby and Ciruna - 2007 - Conservation Units for Pacific Salmon under the Wi.pdf}
 }
 
@@ -653,7 +651,7 @@
   title = {Evaluating {{Benchmarks}} of {{Biological Status}} for {{Data-limited Conservation Units}} of {{Pacific Salmon}}, {{Focusing}} on {{Chum Salmon}} in {{Southern BC}}},
   author = {Holt, Carrie and Davis, Brooke and Dobson, Diana and Godbout, Lyse and Luedke, Wilf and Tadey, Joe and Van Will, P},
   year = {2018},
-  journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+  journal = {DFO Canadian Science Advisory Secretariat Research Document},
   volume = {2018/011},
   pages = {ix + 77},
   abstract = {Status assessments for Chum Salmon (Oncorhynchus keta) under the Wild Salmon Policy (WSP) have been limited, in part because recruitment time-series required to calculate stock- recruitment based benchmarks are not consistently available. Alternative benchmarks have been proposed for data-limited Conservation Units (CUs) using percentiles of the observed spawner abundance time-series. However, these benchmarks have not been evaluated against stock-recruitment benchmarks currently used to assess status on abundances for data-rich CUs. Our goals were to evaluate percentile-based benchmarks against stock-recruitment based benchmarks accounting for high uncertainties and possible biases in spawner abundances, catches, recruitment estimates, and age-at-maturity. We used two approaches to evaluate benchmarks based on a retrospective comparison through the historical record and a prospective simulation model under numerous hypothetical future scenarios. We demonstrate an approach for providing assessments that accounts for uncertainties in benchmarks, and provide advice on the applicability of percentile-based benchmarks for data-limited CUs of Chum Salmon relative to stock-recruitment benchmarks used for data-rich CUs. In general, our results support the application of percentile-based benchmarks for data-limited CUs of Chum Salmon when productivity is moderate to high ({$>$}2.5 recruits/spawner) and harvest rates are low to moderate ({$\leq$}40\%). However, we suggest further evaluation of percentile benchmarks (and the consideration of alternatives) when productivity is expected to be low and/or harvest rates high. Under these conditions, concurrent declines in abundances and percentile benchmarks can results in status assessments that are more optimistic than those from stock-recruitment benchmarks due to shifting baselines.},
@@ -661,7 +659,7 @@
 }
 
 @techreport{holtEvaluationBenchmarksConservation2009,
-  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Res}}. {{Doc}}.},
+  type = {{{DFO Canadian Science Advisory Secretariat Science Reserach Document}}},
   title = {Evaluation of {{Benchmarks}} for {{Conservation Units}} in {{Canada}}'s {{Wild Salmon Policy}}: {{Technical Documentation}}},
   author = {Holt, Carrie A},
   year = {2009},
@@ -680,31 +678,34 @@
   volume = {InPress}
 }
 
-@article{holtIndicatorsStatusBenchmarks2009a,
+@article{holtIndicatorsStatusBenchmarks2009,
   title = {Indicators of {{Status}} and {{Benchmarks}} for {{Conservation Units}} in {{Canada}}'s {{Wild Salmon Policy}}},
   author = {Holt, Carrie A and Cass, Alan and Holtby, Blair and Riddell, Brian},
   year = {2009},
+  journal = {Canadian Science Advisory Secretariat Science Research Document},
+  volume = {2009/058},
   pages = {82},
   abstract = {The goal of Canada's Wild Salmon Policy (WSP) is to restore and maintain healthy and diverse salmon populations and their habitats for the benefit and enjoyment of the people of Canada in perpetuity. To achieve that goal, the WSP requires that biological status be assessed for all geographically, ecologically, and genetically distinct populations, or Conservation Units (CUs). One component of that assessment is identifying quantifiable metrics of biological status and benchmarks along those metrics. Here, we provide a toolkit of metrics and benchmarks of status, which will set the stage for future CU assessments. Specifically, we propose a multi-criteria approach for assessing status that uses information on current abundances, trends in abundance over time, distribution of spawners, and fishing mortality relative to stock productivity. That approach captures the multiple dimensions of population status that will be important to achieve WSP goals better than assessments based on abundances alone. Furthermore, any redundancy in information content among criteria may allow for increased flexibility when assessing stocks that differ widely in data quantity and quality. Here, we identify quantifiable metrics and candidate benchmarks drawn from the scientific literature and previous management experience. Using a simulation model, we further evaluate a subset of those benchmarks on two performance metrics: the probability of extirpation over the long term and the probability of recovery to a target. Finally, we apply those metrics and candidate benchmarks to two example CUs, Takla/Trembleur sockeye salmon (Early Stuart run-timing group of the Fraser River) and Hecate Strait Lowlands pink salmon (odd year).},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\MHF9YRE8\\Holt et al. - 2009 - Indicators of Status and Benchmarks for Conservati.pdf}
 }
 
-@book{holtQuantitativeToolEvaluating2020,
+@article{holtQuantitativeToolEvaluating2020,
   title = {A Quantitative Tool for Evaluating Rebuilding Plans for {{Pacific}} Salmon},
   author = {Holt, C. A and Freshwater, C. and Holt, K.R. and Huang, A.M.},
   year = {2020},
-  series = {Canadian {{Technical Report}} of {{Fisheries}} and {{Aquatic Sciences}}},
+  journal = {Canadian Technical Report of Fisheries and Aquatic Sciences},
   volume = {3402},
+  pages = {v + 26p.},
   abstract = {"Rebuilding plans are required for depleted stocks under the Fish Stock Provisions of Canada's revised Fisheries Act (2019) and DFO's Sustainable Fisheries Framework (2009). The overall goal of this project was to create a tool for developing and evaluating the harvest component of rebuilding plans for Pacific salmon, which evaluates trade-offs between conservation objectives and other fisheries management objectives"--Abstract.},
-  isbn = {978-0-660-35946-5},
   langid = {english},
   annotation = {OCLC: 1199014307}
 }
 
 @techreport{hsrghatcheryscientificreviewgroupColumbiaRiverHatchery2009,
+  type = {{{URL}}: {{https://www.streamnet.org/home/data-maps/hatchery-reform/}}},
   title = {Columbia {{River Hatchery Reform SystemWide Report}}},
-  author = {HSRG (Hatchery Scientific Review Group)},
+  author = {HSRG (Hatchery Scientific Review Group),},
   year = {2009}
 }
 
@@ -924,14 +925,14 @@
   number = {British Columbia Ministry of Forests Special Report Series 6},
   pages = {330},
   address = {{Victoria, BC}},
-  institution = {{British Columbia Ministry of Forests}}
+  institution = {{British Columbia Ministry of Forests. URL: https://www.for.gov.bc.ca/hfd/pubs/Docs/Srs/Srs06.pdf}}
 }
 
 @misc{ministryoftheenvironmentEcologicalAquaticUnits2021,
-  title = {Ecological {{Aquatic Units}} of {{British Columbia}} ({{EAUBC}}) ({{Theme}})},
+  title = {Ecological {{Aquatic Units}} of {{British Columbia}} ({{EAUBC}})},
   author = {{Ministry of the Environment}},
   year = {2021},
-  publisher = {{Knowledge Management Branch, Ministry of the Environment, British Columbia}}
+  publisher = {{Knowledge Management Branch, Ministry of the Environment, British Columbia. URL: https://www.sciencebase.gov/catalog/item/51b8affee4b03203c522b364}}
 }
 
 @article{mullowneyBasisPrecautionaryApproach2018,
@@ -960,11 +961,12 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\JU3LLQY5\\Mullowney et al. - 2020 - Biological perspectives on complexities of fisheri.pdf}
 }
 
-@techreport{nobleHabitatbasedEscapementBenchmarks2015,
-  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}. 2015/050},
+@article{nobleHabitatbasedEscapementBenchmarks2015,
   title = {Habitat-Based Escapement Benchmarks for {{Coho Salmon}} in {{Georgia Strait Mainland}}, {{Georgia Strait Vancouver Island}}, and {{Lower Fraser River Management Units}}.},
   author = {Noble, CAJ and Korman, J and Bocking, R},
   year = {2015},
+  journal = {DFO Canadian Sciene Advisory Secrtariat Research Document},
+  volume = {2015/050},
   pages = {x + 91},
   abstract = {Objectives of both the Pacific Salmon Treaty (PST) and the Wild Salmon Policy (WSP) require the development of biological benchmarks for assessing population status and monitoring exploitation of Southern BC Coho Salmon. Insufficient data at appropriate temporal and stock-specific scales prevents the use of traditional stock-recruit methods for deriving biological benchmarks for these populations. Instead, novel analytic approaches are required to utilize information from the available data. For populations of Southern BC Coho Salmon, an analysis funded by the Southern Endowment Fund of the Pacific Salmon Commission (PSC) was undertaken by LGL Ltd. of Sidney, BC and Ecometric Research of Vancouver, BC to provide science-based recommendations for escapement and exploitation rate benchmarks. Fisheries and Oceans Canada (DFO) Fisheries Management Branch has requested that Science Branch provide advice, based on the Contractors' work, for science-based escapement and exploitation rate benchmarks for three PST management units and their component WSP conservation units of Southern BC Coho Salmon. Results of this assessment and advice arising from the Regional Peer Review process will be used to inform the ongoing development of WSP benchmarks, assessment of WSP conservation unit status and PST management reference points. This Science Advisory Report is from the November 4-5, 2014 and April 14, 2015 regional peer review on Determination of Escapement and Exploitation Rate Benchmarks for the Three Georgia Strait Southern BC Coho Management Units. Additional publications from this meeting will be posted on the Fisheries and Oceans Canada (DFO) Science Advisory Schedule as they become available.},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\J5XYMZMI\\Noble et al. - 2015 - Habitat-based escapement benchmarks for Coho Salmo.pdf;C\:\\Users\\HoltC\\Zotero\\storage\\TAKF7CZY\\Coho Habitat-based BMs 2015 Res Doc.pdf}
@@ -996,7 +998,7 @@
 }
 
 @techreport{parkenHabitatbasedMethodsEstimate2006,
-  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Res}}. {{Doc}}.},
+  type = {{{DFO Canadian Science Advisory Secretariat Research Document}}},
   title = {Habitat-Based Methods to Estimate Escapement Goals for Data Limited {{Chinook}} Salmon Stocks in {{British Columbia}}, 2004},
   author = {Parken, Charles K. and McNicol, Richard E. and Irvine, James R.},
   year = {2006},
@@ -1176,14 +1178,14 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\4YHUQQCM\\Pyper et al. - Spatial Covariation in Survival Rates of Northeast.pdf}
 }
 
-@article{reidTwoEyedSeeingIndigenous2020,
+@article{reidTwoEyedSeeingIndigenous2021,
   title = {``{{Two-Eyed Seeing}}'': {{An Indigenous}} Framework to Transform Fisheries Research and Management},
   shorttitle = {``{{Two-Eyed Seeing}}''},
   author = {Reid, Andrea J. and Eckert, Lauren E. and Lane, John-Francis and Young, Nathan and Hinch, Scott G. and Darimont, Chris T. and Cooke, Steven J. and Ban, Natalie C. and Marshall, Albert},
-  year = {2020},
+  year = {2021},
   journal = {Fish and Fisheries},
-  volume = {n/a},
-  number = {n/a},
+  volume = {22},
+  pages = {243--261},
   issn = {1467-2979},
   doi = {10.1111/faf.12516},
   abstract = {Increasingly, fisheries researchers and managers seek or are compelled to ``bridge'' Indigenous knowledge systems with Western scientific approaches to understanding and governing fisheries. Here, we move beyond the all-too-common narrative about integrating or incorporating (too often used as euphemisms for assimilating) other knowledge systems into Western science, instead of building an ethic of knowledge coexistence and complementarity in knowledge generation using Two-Eyed Seeing as a guiding framework. Two-Eyed Seeing (Etuaptmumk in Mi'kmaw) embraces ``learning to see from one eye with the strengths of Indigenous knowledges and ways of knowing, and from the other eye with the strengths of mainstream knowledges and ways of knowing, and to use both these eyes together, for the benefit of all,'' as envisaged by Elder Dr. Albert Marshall. In this paper, we examine the notion of knowledge dichotomies and imperatives for knowledge coexistence and draw parallels between Two-Eyed Seeing and other analogous Indigenous frameworks from around the world. It is set apart from other Indigenous frameworks in its explicit action imperative\textemdash central to Two-Eyed Seeing is the notion that knowledge transforms the holder and that the holder bears a responsibility to act on that knowledge. We explore its operationalization through three Canadian aquatic and fisheries case-studies that co-develop questions, document and mobilize knowledge, and co-produce insights and decisions. We argue that Two-Eyed Seeing provides a pathway to a plural coexistence, where time-tested Indigenous knowledge systems can be paired with, not subsumed by, Western scientific insights for an equitable and sustainable future.},
@@ -1283,6 +1285,12 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\V69MDS9M\\Stalberg et al. - Canada’s Policy for Conservation of Wild Pacific S.pdf}
 }
 
+@misc{standevelopmentteamRStanInterfaceStan2020,
+  title = {{{RStan}}: The {{R}} Interface to {{Stan}}. {{R}} Package Version 2.21.2. {{http://mc-stan.org/.}}},
+  author = {Stan Development Team,},
+  year = {2020}
+}
+
 @article{statonIncorporatingDemographicInformation2021,
   title = {Incorporating Demographic Information into Spawner\textendash Recruit Analyses Alters Biological Reference Point Estimates for a Western {{Alaska}} Salmon Population},
   author = {Staton, Benjamin A. and Catalano, Matthew J. and Fleischman, Steven J. and Ohlberger, Jan},
@@ -1349,14 +1357,13 @@
   address = {{Princeton}}
 }
 
-@techreport{withlerGeneticallyBasedTargets2018,
-  type = {Research {{Document}}},
+@article{withlerGeneticallyBasedTargets2018,
   title = {Genetically {{Based Targets}} for {{Enhanced Contributions}} to {{Canadian Pacific Chinook Salmon Populations}}},
   author = {Withler, R.E. and Bradford, M.J. and Willis, D.M. and Holt, C.A.},
   year = {2018},
-  number = {2018/019},
-  pages = {88},
-  institution = {{Fisheries and Oceans Canada}}
+  journal = {DFO Canadian Science Advisory Secretariat Research Document},
+  volume = {2015/050},
+  pages = {88}
 }
 
 @article{zhangAccountingNonstationaryStock2021,
