--- a/guidelinesWP/index.Rmd
+++ b/guidelinesWP/index.Rmd
@@ -5,9 +5,10 @@ author: |
   Kendra Holt^2^
   Luke Warkentin^1^ 
   Catarina Wor^1^ 
-  Brendan Connors ^2^ 
-  Ann-Marie Huang ^3^ 
-author_list: "Holt, C.A., Holt, K., Warkentin, L., Wor, C., Connors, B., and Huang, A.-M."
+  Brendan Connors^2^ 
+  Sue Grant^3^
+  Ann-Marie Huang^3^ 
+author_list: "Holt, C.A., Holt, K., Warkentin, L., Wor, C., Connors, B., Grant, S. and Huang, A.-M."
 address: |
   ^1^Pacific Biological Station\
      Fisheries and Oceans Canada, 3190 Hammond Bay Road\
@@ -21,7 +22,7 @@ month: Month # fill in
 year: 2022
 report_number: nnn
 region: Pacific Region
-citation_other_language: "Holt, C.A., Holt, K., Warkentin, L., Wor, C., Connors, B., et Huang, A.-M.. Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. DFO Secr. can. de consult. sci. du MPO. Doc. de rech 2022/nnn. iv + 13 p."
+citation_other_language: "Holt, C.A., Holt, K., Warkentin, L., Wor, C., Connors, B., Grant, S. et Huang, A.-M.. Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. DFO Secr. can. de consult. sci. du MPO. Doc. de rech 2022/nnn. iv + 13 p."
 abstract: |
 
   Limit reference points, LRPs, represent the stock status below which serious harm is occurring to the stock, and are required for major fish stocks (or Stock Management Units, SMUs) prescribed by regulation under amendments to the Canadian Fisheries Act (2019). Pacific salmon are unique among marine fish stocks due to their semelaparous and anadromous life history and significant meta-population structure which results in differences in data availability and modelling approaches for assessments and LRP development. We identified 7 principles for developing LRPs, adapted from those used for LRPs more broadly among marine species. One key principle unique to Pacific salmon is that LRPs should be aligned with Canada’s Wild Salmon Policy (WSP) objective of preserving biodiversity of salmon at the scale of conservation units (CUs) which are often nested within SMUs. We identified a toolkit of LRP methods and provide guidance on how to implement them and under which conditions they should or should not be applied. In particular, we proposed two types of LRPs based on either the proportion of CUs that have status above the ‘red’ zone for WSP status assessments, or aggregate-abundances to the entire SMU. These latter LRPs are derived to have a desired probability of all component CUs being above the ‘red’ zone. We identify uncertainties associated with each approach, and describe how they can be applied across a arrange of data types, qualities and quantities. Their application is demonstrated on three cases studies: Interior Fraser Coho Salmon *Oncorhynchus kisutch*, West Coast Vancouver Island Chinook Salmon, *O. tshawytscha*, and Inside South Coast Chum  Salmon, *O. keta*, excluding the Fraser River.
